# SunSync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gui.py  pyproject.toml  requirements.txt  sunsync.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
assets/: sunsync.desktop
config/: constants.py
display/: manager.py
launchers/: bottles.py  eden.py  faugus.py  heroic.py  lutris.py  retroarch.py  ryubing.py  steam.py
packaging/: PKGBUILD
scripts/: sunshine-start-vmon.sh  sunshine-stop-vmon.sh
sunshine/: sunshine.py
tests/: test_cli_manage.py  test_commands.py
utils/: images.py  input.py  steamgriddb.py  utils.py
