[project]
name = "sunsync"
version = "0.1.0"
description = "Import games from Lutris, Steam, Heroic and other launchers into Sunshine"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "Pillow>=10.0",
    "PyQt6>=6.6",
]

[project.urls]
Homepage = "https://github.com/OscarTienda/SunSync"
Repository = "https://github.com/OscarTienda/SunSync"
Issues = "https://github.com/OscarTienda/SunSync/issues"

[project.scripts]
sunsync = "sunsync:main"
sunsync-gui = "gui:run_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "sunsync.py",
    "gui.py",
    "config",
    "display",
    "launchers",
    "sunshine",
    "utils",
    "scripts",
]
