[project]
name = "sunsync"
version = "0.2.1"
description = "Import games from Lutris, Steam, Heroic and other launchers into Sunshine"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "Pillow>=10.0",
    "PyQt6>=6.6",
]

[project.urls]
Homepage = "https://github.com/OscarTienda/SunSync"
Repository = "https://github.com/OscarTienda/SunSync"
Issues = "https://github.com/OscarTienda/SunSync/issues"

[project.scripts]
sunsync = "sunsync:main"
sunsync-gui = "gui:run_gui"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["sunsync.py", "gui.py", "config", "display", "launchers", "sunshine", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "sunsync.py",
    "gui.py",
    "config",
    "display",
    "launchers",
    "sunshine",
    "utils",
    "scripts",
]
